--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,5 @@
 @import 'components/footer';
 @import 'components/ourStory';
 @import 'components/weddingItenirary';
+@import 'components/form';
+@import 'components/bridalParty';
