refactor(Style and components): Style and components

--- a/src/scss/components/_images.scss
+++ b/src/scss/components/_images.scss
@@ -13,7 +13,8 @@
 .vera_vincenzo {
   background-repeat: no-repeat;
   background-image: url('/images/vera_vincenzo/IMG_0001.JPG');
-  background-position: center; /* Center the image */
-  height: 45vh;
+  background-size: cover;
+  background-position: center;
+  height: 55vh;
   width: 85vw;
 }
