--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,4 @@
 @import 'components/weddingItenirary';
 @import 'components/form';
 @import 'components/bridalParty';
+@import 'components/iframe';
