--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -30,6 +30,9 @@ $color-blue-dark: #205081;
 $color-red: #de1010;
 $color-red-dark: #ad0505;
 
+$color-1-gradient: #fdfcfb;
+$color-2-gradient: #e2d1c3;
+
 // Fonts
 $default-quote-font-size: 3rem;
 $our-story-font-size: 2.5rem;
@@ -38,7 +41,9 @@ $default-small-font-size: 1.5rem;
 //$default-font-family: 'Crafty Girls', cursive;
 
 //$default-font-family: 'Indie Flower', cursive;
-$default-font-family: 'Ibarra Real Nova', serif;
+//$default-font-family: 'Ibarra Real Nova', serif;
+$default-font-family: 'Lemonada', cursive;
+$default-font-family: 'Vidaloka', serif;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
