--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,52 +2,54 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 /* **** */
 
 html {
-    // this defines what 1rem is
-    // in order to make the root font-size = to the 62.5% of 16px
-    // which is the default font-size given by browser
-    font-size: 62.5%; // 1rem = 10px ---> 10px/16px = 62.5%
-
-    // This is a mixin!!
-    //@include respond(tab-scape) { //width < 1200?
-    //  font-size: 56.25%; // 1rem = 9px ---> 9px/16px = 56.25%
-    //}
-    //
-    //@include respond(tab-port) { //width < 900?
-    //  font-size: 50%; // 1rem = 8px ---> 8px/16px = 50%
-    //}
-    //
-    //@include respond(big-desktop) {
-    //  font-size: 75%; // 1rem = 12px ---> 12px/16px = 75%
-    //}
+  // this defines what 1rem is
+  // in order to make the root font-size = to the 62.5% of 16px
+  // which is the default font-size given by browser
+  font-size: 62.5%; // 1rem = 10px ---> 10px/16px = 62.5%
+  background-image: linear-gradient(to right, $color-1-gradient, $color-2-gradient) !important;
+  // This is a mixin!!
+  //@include respond(tab-scape) { //width < 1200?
+  //  font-size: 56.25%; // 1rem = 9px ---> 9px/16px = 56.25%
+  //}
+  //
+  //@include respond(tab-port) { //width < 900?
+  //  font-size: 50%; // 1rem = 8px ---> 8px/16px = 50%
+  //}
+  //
+  //@include respond(big-desktop) {
+  //  font-size: 75%; // 1rem = 12px ---> 12px/16px = 75%
+  //}
 }
 
 body {
-    box-sizing: border-box;
-    padding: 3rem;
-    height: 90vh;
-    //font-family: $default-font-family, sans-serif;
-    //font-style: italic;
-    font-family: $default-font-family, 'cursive';
-    //@include respond(tab-port) {
-    //  padding: 0;
-    //}
+  box-sizing: border-box;
+  padding: 3rem;
+  height: 90vh;
+  -webkit-backface-visibility: hidden;
+  background-image: linear-gradient(to right, $color-1-gradient, $color-2-gradient) !important;
+  //font-family: $default-font-family, sans-serif;
+  //font-style: italic;
+  font-family: $default-font-family, 'cursive';
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
 
 .container {
-    min-height: 85vh;
+  min-height: 85vh;
 }
 
 .columns {
-    align-items: center;
+  align-items: center;
 }
 
 .section {
-    padding: 0;
+  padding: 0;
 }
