--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-    background-color: white;
-    padding-top: 5rem;
-    padding-bottom: 3rem;
-    & .paragraph {
-        font-size: 1.5rem;
-        font-family: 'Courier New', sans-serif;
-    }
+  background-image: linear-gradient(to right, $color-1-gradient, $color-2-gradient) !important;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
+  & .paragraph {
+    font-size: 1.5rem;
+    font-family: 'Courier New', sans-serif;
+  }
 }
