--- a/src/scss/components/_ourStory.scss
+++ b/src/scss/components/_ourStory.scss
@@ -1,3 +1,29 @@
 .ourStory {
-    margin-top: 5rem;
+  margin-top: 5rem;
+  width: 85%;
+}
+
+#heart {
+  position: relative;
+  width: 100px;
+  height: 90px;
+  margin-top: 3rem;
+}
+#heart:before,
+#heart:after {
+  position: absolute;
+  content: '';
+  left: 50px;
+  top: 0;
+  width: 50px;
+  height: 80px;
+  background: red;
+  border-radius: 50px 50px 0 0;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+}
+#heart:after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
 }
