--- a/src/scss/layout/_bridal-paragraph.scss
+++ b/src/scss/layout/_bridal-paragraph.scss
@@ -1,16 +1,17 @@
 .description {
-    margin: 3rem;
+  margin: 1rem;
+  font-style: italic;
 }
 
 section {
-    & .reverse-row-order {
-        @include respond(phone) {
-            display: flex;
-            flex-direction: column-reverse;
-        }
-        @include respond(tab-port) {
-            display: flex;
-            flex-direction: column-reverse;
-        }
+  & .reverse-row-order {
+    @include respond(phone) {
+      display: flex;
+      flex-direction: column-reverse;
     }
+    @include respond(tab-port) {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+  }
 }
