--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,3 +15,5 @@
 @import 'components/form';
 @import 'components/bridalParty';
 @import 'components/iframe';
+@import 'components/header';
+@import 'components/reservation';
