--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,25 +1,25 @@
 @mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media (max-width: 41.7em) {
-            @content;
-        } //600px
-    }
+  @if $breakpoint == phone {
+    @media (max-width: 41.7em) {
+      @content;
+    } //600px
+  }
 
-    @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) {
-            @content;
-        } //900px
-    }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    } //900px
+  }
 
-    @if $breakpoint == tab-scape {
-        @media (max-width: 75em) {
-            @content;
-        } //1200px
-    }
+  @if $breakpoint == tab-scape {
+    @media (max-width: 75em) and (max-height: 64rem) {
+      @content;
+    } //1200px
+  }
 
-    @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) {
-            @content;
-        } //1800
-    }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    } //1800
+  }
 }
