--- a/src/scss/components/_images.scss
+++ b/src/scss/components/_images.scss
@@ -11,24 +11,5 @@
 }
 
 .is-bordered {
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-
-.vera_vincenzo {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 60vh;
-  width: 60vw;
-  opacity: 1;
-  -webkit-transition: background 1.5s ease-in-out;
-  -moz-transition: background 1.5s ease-in-out;
-  -o-transition: background 1.5s ease-in-out;
-  -ms-transition: background 1.5s ease-in-out;
-  transition: background 1.5s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: scale(1);
+  border-radius: 20px;
 }
