--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -77,3 +77,14 @@ body {
 .emailUs {
   font-size: 2rem;
 }
+
+.covid_title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: red;
+}
+
+.covid_paragraph {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
